--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+	//json
+	implementation 'org.json:json:20220320'
+	implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 tasks.named('test') {
